--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@trpc/server": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "server-only": "^0.0.1",
